# project-managment-system

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/data/: base-file-repository.hpp  done-task-file-repository.cpp  done-task-file-repository.hpp  done-task-repository.hpp  in-progress-task-file-repository.cpp  in-progress-task-file-repository.hpp  in-progress-task-repository.hpp  inbox-task-file-repository.cpp  inbox-task-file-repository.hpp  inbox-task-repository.hpp  repository.hpp  todo-task-file-repository.cpp  todo-task-file-repository.hpp  todo-task-repository.hpp  user-file-repository.cpp  user-file-repository.hpp  user-repository.hpp
src/dtos/: create-subtask-dto.hpp  create-task-dto.hpp  create-user-dto.hpp  move-subtask-to-todo-dto.hpp  move-task-to-todo-dto.hpp  user-dto.hpp
src/entities/: entity.hpp  subtask.cpp  subtask.hpp  task-component.cpp  task-component.hpp  task.cpp  task.hpp  user.cpp  user.hpp
src/helpers/: date-time.cpp  date-time.hpp
src/helpers/byte-stream/: byte-stream.cpp  byte-stream.hpp  priority-queue-serialization.hpp  queue-serialization.hpp  string-serialization.hpp  vector-serialization.hpp
src/helpers/hasher/: basic-hasher.cpp  basic-hasher.hpp  hasher.hpp
src/helpers/ui/: input.cpp  input.hpp  printer.cpp  printer.hpp  task-string-builder.cpp  task-string-builder.hpp
src/service/: auth-service.cpp  auth-service.hpp  task-service-impl.cpp  task-service-impl.hpp  task-service.hpp  user-service-impl.cpp  user-service-impl.hpp  user-service.hpp
src/service/proxy/: base-security-proxy.hpp  security-task-proxy.cpp  security-task-proxy.hpp  security-user-proxy.cpp  security-user-proxy.hpp
src/ui/: cli-app.cpp  cli-app.hpp  ui-context.cpp  ui-context.hpp
src/ui/commands/: archive-done-command.cpp  archive-done-command.hpp  change-role-command.cpp  change-role-command.hpp  command.hpp  create-task-command.cpp  create-task-command.hpp  create-user-command.cpp  create-user-command.hpp  logout-command.cpp  logout-command.hpp  mark-subtask-done-command.cpp  mark-subtask-done-command.hpp  move-to-done-command.cpp  move-to-done-command.hpp  move-to-in-progress-command.cpp  move-to-in-progress-command.hpp  move-to-todo-command.cpp  move-to-todo-command.hpp  show-done-command.cpp  show-done-command.hpp  show-in-progress-command.cpp  show-in-progress-command.hpp  show-inbox-command.cpp  show-inbox-command.hpp  show-todo-command.cpp  show-todo-command.hpp  show-users-command.cpp  show-users-command.hpp
src/ui/states/: login-state.cpp  login-state.hpp  session-state.cpp  session-state.hpp  ui-state.hpp
